	_ipmi_calculate_k): Fix parameter checks to return errors for
	invalid cipher combinations.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_check_rakp_message_2_key_exchange_authentication_code,
	ipmi_calculate_rakp_3_key_exchange_authentication_code): Rename
	variables to match ipmi spec.

2005-03-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-messaging-support-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h
	(fill_cmd_get_channel_cipher_suites): Support Get Channel Cipher
	Suites command.

	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h: New file.

	* libfreeipmi/include/Makefile.am,
	libfreeipmi/include/freeipmi/freeipmi.h: Support new .h file.

	* ipmipower/: Begin crude intial support of IPMI 2.0 by adding
	IPMI 2.0 Get Authentication Capabilities, Get Channel Cipher
	Suites, Open Session, and RAKP protocol into protocol state
	machine.  Change -R option to -M option.  Add new -R option
	support protocol selection by user.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(assemble_ipmi_rmcpplus_pkt, unassemble_ipmi_rmcpplus_pkt): Fix
	session trailer assembly bug.

2005-03-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h,
	libfreeipmi/src/ipmi-error.c (ipmi_strerror_r): Support for more
	commands under the rmcpplus support and payload commands section.
	General code cleanup.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus-support-and-payload-cmds.h,
	libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c: New
	templates and functions to support commands under this chapter of
	the IPMI spec.

	* common/src/Makefile.am, libfreeipmi/include/Makefile.am: Fix
	distcheck bugs.

	* Globally fix gcc 4.0 warnings.

	* libfreeipmi/include/freeipmi/ipmi-sol-cmds.h,
	fish/extensions/bc-common.scm (sol-bit-rates),
	fish/extensions/bc-sol-conf-section.scm: Support bit-rate '0'
	which means "Use Serial Bit rate".
