@@ -157,6 +157,7 @@ extern fiid_template_t tmpl_cmd_get_channel_authentication_capabilities_v20_rs;
 extern fiid_template_t tmpl_cmd_get_channel_cipher_suites_rq;
 extern fiid_template_t tmpl_cmd_get_channel_cipher_suites_rs;
 extern fiid_template_t tmpl_cmd_get_channel_cipher_suites_list_supported_algorithms_rs;
+extern fiid_template_t tmpl_cmd_get_channel_cipher_suites_rs;
 
 extern fiid_template_t tmpl_cmd_get_session_challenge_rq;
 extern fiid_template_t tmpl_cmd_get_session_challenge_rs;
